--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
       "@fortawesome/fontawesome-svg-core": "^6.4.0",
       "@fortawesome/free-solid-svg-icons": "^6.4.0",
       "@fortawesome/react-fontawesome": "^0.2.0",
+      "@reduxjs/toolkit": "^1.9.3",
       "antd": "^5.2.0",
       "classnames": "^2.3.2",
       "echarts": "^5.4.2",
       "react": "^18.2.0",
       "react-dom": "^18.2.0",
       "react-hook-form": "^7.43.5",
+      "react-redux": "^8.0.5",
       "react-router-dom": "^6.9.0",
-      "react-scripts": "5.0.1"
+      "react-scripts": "5.0.1",
+      "redux": "^4.2.1",
+      "redux-thunk": "^2.4.2"
    },
    "scripts": {
       "start": "react-scripts start",
